<resources>
        <string name="app_name">阅读</string>
        <string name="read_summary">让阅读成为一种习惯。</string>
        <string name="yes">是</string>
        <string name="no">否</string>
        <string name="confirm">确认</string>
        <string name="cancel">取消</string>
        <string name="error">错误</string>
        <string name="enter_bookshelf">进入书架</string>
        <string name="last_read">最后阅读</string>
        <string name="delete_fail">删除失败</string>
        <string name="delete_success">删除成功</string>
        <string name="read_file_error">文件读取失败</string>
        <string name="import_fail">导入失败</string>
        <string name="format_error">格式不对</string>
        <string name="seem_not_source_info">似乎不是书源信息</string>
        <string name="import_read_3_book_source">导入了阅读3.0书源</string>
        <string name="no_book">没有书籍</string>
        <string name="open_text_fail">打开文本失败</string>
        <string name="already_in_bookshelf">已在书架中</string>
        <string name="add_book_fail">添加书籍失败</string>
        <string name="add_book_success">添加书籍成功</string>
        <string name="is_importing_book_source">正在导入书源</string>
        <string name="import_number_book_source_success">导入成功%d个书源</string>
        <string name="add_to_bookshelf_fail">放入书架失败</string>
        <string name="delete_book_fail">删除书籍失败</string>
        <string name="import_local_book_need_storage_permission">导入本地书籍需要储存权限</string>
        <string name="need_storage_permission_to_backup_book_information">本软件需要存储权限来存储备份书籍信息</string>
        <string name="book_source">书源</string>
        <string name="purify">净化</string>
        <string name="download">下载</string>
        <string name="backup">备份</string>
        <string name="restore">恢复</string>
        <string name="bookshelf">书架</string>
        <string name="search_book_name_or_author">搜索书名、作者</string>
        <string name="all_books">所有书籍</string>
        <string name="pursue">追更</string>
        <string name="fattening">养肥</string>
        <string name="finish">完结</string>
        <string name="local_book">本地书籍</string>
        <string name="double_click_exit_read">再按一次退出阅读</string>
        <string name="book_info">书籍信息</string>
        <string name="book_name">书名</string>
        <string name="author">作者</string>
        <string name="origin">来源</string>
        <string name="change_origin">换源</string>
        <string name="read_dur_progress">最近: %s</string>
        <string name="check_catalog">查看目录</string>
        <string name="book_groups">分组</string>
        <string name="manage_groups">设置分组</string>
        <string name="local">本地</string>
        <string name="book_intro">内容简介</string>
        <string name="remove_from_bookshelf">删除书籍</string>
        <string name="start_read">开始阅读</string>
        <string name="add_to_shelf">放入书架</string>
        <string name="continue_read">继续阅读</string>
        <string name="data_loading">加载数据中…</string>
        <string name="load_error_retry">加载失败，点击重试</string>
        <string name="unknown">未知</string>
        <string name="copy_complete">已拷贝</string>
        <string name="local_directory">本地目录</string>
        <string name="smart_import">智能导入</string>
        <string name="search">搜索</string>
        <string name="search_book_source">搜索书源</string>
        <string name="search_book_source_num">搜索(共%d个书源)</string>
        <string name="del_delete_book_source">是否删除所选书源？</string>
        <string name="sys_file_picker">系统文件选择器</string>
        <string name="input_book_source_url">输入书源网址</string>
        <string name="import_success">导入成功</string>
        <string name="del_delete_all_replace_rule">是否删除所有规则？</string>
        <string name="download_offline">离线下载</string>
        <string name="un_download">还剩%d章未下载</string>
        <string name="chapter_regex">目录正则</string>
        <string name="del_delete_all_txt_chapter_rule">是否删除所有目录正则？</string>
        <string name="about_read">关于阅读</string>
        <string name="cannot_open">无法打开</string>
        <string name="version_name">Version %s</string>
        <string name="about_description">For Huawei Matepad Paper</string>
        <string name="check_update">检查更新</string>
        <string name="update_log">更新日志</string>
        <string name="git_hub">项目主页</string>
        <string name="disclaimer">免责声明</string>
        <string name="cannot_search_any_books">未搜索到相关书籍！</string>
        <string name="get_data_error">获取数据失败！</string>
        <string name="retry">重试</string>
        <string name="book_source_search_range">书源搜索范围</string>
        <string name="all_source">全部书源</string>
        <string name="delete_all_history">是否删除所有历史记录?</string>
        <string name="searchHistory">搜索历史</string>
        <string name="origin_format">来源: %s</string>
        <string name="is_loading">加载中…</string>
        <string name="book_search_last">最新: %s</string>
        <string name="no_kind">暂未分类</string>
        <string name="edit_book_info">书籍信息编辑</string>
        <string name="cover_path">封面地址</string>
        <string name="bg_image_per">获取背景图片需存储权限</string>
        <string name="select_local_image">选择本地图片</string>
        <string name="cover_change_source">封面换源</string>
        <string name="refresh_cover">刷新封面</string>
        <string name="audio">音频</string>
        <string name="is_enable">启用</string>
        <string name="source_no_login">当前源没有配置登陆地址</string>
        <string name="if_copy_find_content">是否拷贝发现内容？</string>
        <string name="basic">基本</string>
        <string name="find">发现</string>
        <string name="info">详情</string>
        <string name="main_content">正文</string>
        <string name="save_success">保存成功</string>
        <string name="non_null_source_name_url">书源名称和URL不能为空</string>
        <string name="book_source_url">书源URL(bookSourceUrl)</string>
        <string name="book_source_name">书源名称(bookSourceName)</string>
        <string name="book_source_group">书源分组(bookSourceGroup)</string>
        <string name="book_source_login_url">登录URL(loginUrl)</string>
        <string name="login_ui">登录UI(loginUi)</string>
        <string name="login_check_js">登录检查Js(loginCheckJs)</string>
        <string name="rule_search_url">搜索地址(ruleSearchUrl)</string>
        <string name="rule_search_list">搜索列表规则(ruleSearchList)</string>
        <string name="rule_search_name">搜索书名规则(ruleSearchName)</string>
        <string name="rule_search_author">搜索作者规则(ruleSearchAuthor)</string>
        <string name="rule_search_kind">搜索分类规则(ruleSearchKind)</string>
        <string name="rule_search_last_chapter">搜索最新章节规则(ruleSearchLastChapter)</string>
        <string name="rule_search_introduce">搜索简介规则(ruleSearchIntroduce)</string>
        <string name="rule_search_cover_url">搜索封面规则(ruleSearchCoverUrl)</string>
        <string name="rule_search_note_url">搜索书籍URL规则(ruleSearchNoteUrl)</string>
        <string name="book_url_pattern">书籍详情URL正则(ruleBookUrlPattern)</string>
        <string name="rule_book_info_init">书籍详情预处理规则(ruleBookInfoInit)</string>
        <string name="rule_book_name">书名规则(ruleBookName)</string>
        <string name="rule_book_author">作者规则(ruleBookAuthor)</string>
        <string name="rule_cover_url">封面规则(ruleCoverUrl)</string>
        <string name="rule_introduce">简介规则(ruleIntroduce)</string>
        <string name="rule_book_kind">分类规则(ruleBookKind)</string>
        <string name="rule_book_last_chapter">最新章节规则(ruleBookLastChapter)</string>
        <string name="rule_chapter_list_url">目录URL规则(ruleChapterUrl)</string>
        <string name="rule_chapter_list_url_next">目录下一页规则(ruleChapterUrlNext)</string>
        <string name="rule_chapter_list">目录列表规则(ruleChapterList)</string>
        <string name="rule_chapter_name">章节名称规则(ruleChapterName)</string>
        <string name="rule_content_url">章节URL规则(ruleContentUrl)</string>
        <string name="rule_chapter_vip">VIP标识(ruleChapterVip)</string>
        <string name="rule_chapter_pay">购买标识(ruleChapterPay)</string>
        <string name="rule_content_url_next">正文下一页URL规则(ruleContentUrlNext)</string>
        <string name="rule_book_content">正文规则(ruleBookContent)</string>
        <string name="rule_book_content_replace">正文替换规则(ruleBookContentReplace)</string>
        <string name="source_user_agent">HttpUserAgent</string>
        <string name="rule_find_url">发现规则(ruleFindUrl)</string>
        <string name="rule_find_list">发现列表规则(ruleFindList)</string>
        <string name="rule_find_name">发现书名规则(ruleFindName)</string>
        <string name="rule_find_author">发现作者规则(ruleFindAuthor)</string>
        <string name="rule_find_kind">发现分类规则(ruleFindKind)</string>
        <string name="rule_find_introduce">发现简介规则(ruleFindIntroduce)</string>
        <string name="rule_find_last_chapter">发现最新章节规则(ruleFindLastChapter)</string>
        <string name="rule_find_note_url">发现书籍URL规则(ruleFindNoteUrl)</string>
        <string name="rule_find_cover_url">发现封面规则(ruleFindCoverUrl)</string>
        <string name="cannot_share">分享失败</string>
        <string name="exit_no_save">是否继续编辑书源？</string>
        <string name="debug_hint">书名、作者、URL</string>
        <string name="cannot_empty">输入不能为空</string>
        <string name="click_check_after_success">登录成功后请点击右上角图标进行首页访问测试</string>
        <string name="check_host_cookie">正在打开首页，成功自动返回主界面</string>
        <string name="catalog">目录</string>
        <string name="this_book_have_no_bookmark">本书暂无书签信息</string>
        <string name="pay">购买</string>
        <string name="aloud_cannot_auto_page">朗读正在运行,不能自动翻页</string>
        <string name="have_not_buy_chapter_please_login_and_refresh">付费章节未购买，如已购买请登录并刷新目录</string>
        <string name="have_copy_to_clipboard">所选内容已经复制到剪贴板</string>
        <string name="network_connection_unavailable_cannot_refresh_chapter">网络不可用，无法刷新当前章节</string>
        <string name="input_charset">输入编码</string>
        <string name="choose_chapter_regex">选择目录正则</string>
        <string name="manage_chapter_regex">管理目录正则</string>
        <string name="check_add_bookshelf">是否将《%s》放入书架？</string>
        <string name="read_aloud_pause">朗读暂停</string>
        <string name="please_grant_storage_permission">请给于存储权限</string>
        <string name="have_choose_item">已选择%d项</string>
        <string name="have_choose_items">已选择%d项</string>
        <string name="unselected">未选择</string>
        <string name="sure_del_book">是否删除书籍？</string>
        <string name="bookshelf_empty">书架还空着，先去添加吧！</string>
        <string name="select_all">全选</string>
        <string name="delete">删除</string>
        <string name="default_file_path">内部存储</string>
        <string name="parent">上级</string>
        <string name="setting">设置</string>
        <string name="sure_delete_download_book">是否同时删除已下载的书籍目录？</string>
        <string name="launcher_setting">启动设置</string>
        <string name="default_read">默认跳转最近阅读</string>
        <string name="backup_setting">备份设置</string>
        <string name="local_backup_setting">本地备份设置</string>
        <string name="web_dav_setting">WebDav设置</string>
        <string name="update_setting">更新设置</string>
        <string name="auto_update">自动更新书籍</string>
        <string name="auto_download">自动下载最新章节</string>
        <string name="auto_change_source_update_chapter">后台换源更新最新章节</string>
        <string name="purify_setting">净化设置</string>
        <string name="bookmark">书签</string>
        <string name="content">内容</string>
        <string name="save">保存</string>
        <string name="disable_book_source">禁用书源</string>
        <string name="name">名称</string>
        <string name="regex">正则</string>
        <string name="refresh">重新加载</string>
        <string name="disable_update">禁止更新</string>
        <string name="edit_book_source">编辑书源</string>
        <string name="copy_book_url">复制网址</string>
        <string name="replace_rule_title">替换净化</string>
        <string name="edit_replace_rule">编辑替换规则</string>
        <string name="light_novel_paragraph">重新分段</string>
        <string name="update_chapter">更新目录</string>
        <string name="open_browser">在浏览器中打开</string>
</resources>