<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_background"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/chapter_regex"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <com.jack.bookshelf.widget.text.PaperTextInputLayout
        android:id="@+id/til_rule_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tie_rule_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3" />
    </com.jack.bookshelf.widget.text.PaperTextInputLayout>
    <com.jack.bookshelf.widget.text.PaperTextInputLayout
        android:id="@+id/til_rule_regex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regex"
        android:padding="10dp">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tie_rule_regex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3" />
    </com.jack.bookshelf.widget.text.PaperTextInputLayout>
    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alert_dialog_button_layout_height"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>
</LinearLayout>
