<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/alert_dialog_radius"
    android:paddingEnd="@dimen/alert_dialog_radius"
    android:paddingTop="@dimen/alert_dialog_padding_top"
    android:paddingBottom="28dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alert_dialog_title_margin_bottom"
        android:gravity="start"
        android:text="@string/bookmark"
        android:textColor="@color/black"
        android:textSize="@dimen/alert_dialog_title_text_size"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvChapterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alert_dialog_message_margin_bottom"
        android:textColor="@color/black"
        android:textSize="@dimen/alert_dialog_message_text_size"
        tools:text="第一章"/>
    <com.jack.bookshelf.widget.text.PaperTextInputLayout
        android:id="@+id/til_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="-3dp"
        android:paddingEnd="-6dp"
        android:layout_marginBottom="@dimen/alert_dialog_message_margin_bottom"
        android:hint="@string/content">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tie_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="3" />
    </com.jack.bookshelf.widget.text.PaperTextInputLayout>
    <!-- 按钮 -->
    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="@dimen/alert_dialog_button_text_size"
        android:textColor="@color/text_color"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/llEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alert_dialog_button_layout_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="@dimen/alert_dialog_button_text_size"
            android:textStyle="bold"/>
        <!-- 分割线 -->
        <LinearLayout
            android:layout_width="@dimen/alert_dialog_button_divide_line_width"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/alert_dialog_button_text_size"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
